# LACA-Local-AI-Context-Accelerator

./: LICENSE  README.md
AI/: CHANGELOG.md  CODE_GRAPH_LAYER.md  CONTINUE.md  INSTRUCTION.md  MANIFEST_SHA256.json  MANIFEST_SHA256.txt  PUBLIC_RANKING_NOTES.md  README.md  RUN_CONTINUE.bat  RUN_GRAPH.bat  RUN_RESULT.bat  RUN_SCAN.bat  RUN_STATUS.bat  TASK.md  TASK.txt  TRANSFORMER_ATTENTION_NOTES.md  USER_MANUAL.md  USER_PROMPT_CONTINUE_EN.txt  USER_PROMPT_CONTINUE_UA.txt  USER_PROMPT_FOR_ANTIGRAVITY_EN.txt  USER_PROMPT_FOR_ANTIGRAVITY_UA.txt  run.py  ІНСТРУКЦІЯ_UA.md  МАНУАЛ_UA.md  ПРОДОВЖИТИ_UA.md  ТЗ_UA.md
AI/src/laca/: cli.py  code_graph.py  field_ranker.cpp
local_ai_context_accelerator_laca_v0_2/: LICENSE  MANIFEST_SHA256.json  MANIFEST_SHA256.txt  README.md  pyproject.toml
local_ai_context_accelerator_laca_v0_2/docs/: AUTHORSHIP.md  FORMAT_SPEC.md  PROMPT_FOR_CODEX.md  QUICK_START.md
local_ai_context_accelerator_laca_v0_2/examples/: COORDINATE_STATE.example.vmem  example_run_windows.bat
local_ai_context_accelerator_laca_v0_2/examples/sample_project/: README.md
local_ai_context_accelerator_laca_v0_2/src/laca/: __init__.py  cli.py  coordinate_ranker.cpp
local_ai_context_accelerator_laca_v0_2/tests/: test_cli.py
