[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-context-accelerator"
version = "0.2.0"
description = "A local-first context compression tool for AI coding agents."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Ruben Galstyn"},
]
keywords = ["ai", "coding-agents", "context-compression", "developer-tools", "local-ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/rubengalstyn/local-ai-context-accelerator"
Repository = "https://github.com/rubengalstyn/local-ai-context-accelerator"

[project.scripts]
laca = "laca.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
